--- a/.github/workflows/rpi-image.yml
+++ b/.github/workflows/rpi-image.yml
@@ -16,6 +16,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build image
         run: |
+          chmod +x ./builder/image-build.sh
+          chmod +x ./builder/image-ros.sh
+          chmod +x ./builder/image-software.sh
+          chmod +x ./builder/image-validate.sh
+          chmod +x ./builder/standalone-install.sh
           docker run --privileged --rm -v /dev:/dev -v $(pwd):/builder/repo -e TRAVIS_TAG="${{ github.event.release.tag_name }}" sfalexrog/img-tool:qemu-update
       - name: Compress image
         run: |
