--- a/.github/workflows/rpi-image.yml
+++ b/.github/workflows/rpi-image.yml
@@ -18,6 +18,7 @@ jobs:
         run: |
           chmod -R 777 ./builder
           chmod -R 777 ./builder/assets
+          chmod -R 777 ./clover
           docker run --privileged --rm -v /dev:/dev -v $(pwd):/builder/repo -e TRAVIS_TAG="${{ github.event.release.tag_name }}" sfalexrog/img-tool:qemu-update
       - name: Compress image
         run: |
